# Three-Filters-to-Normal

./: .gitignore  justfile
apps/: CMakeLists.txt  USAGE.md  bin2png.cpp  tftn.cu
apps/sample/: torusknot_params.txt
c_code/example/: demo.cpp
cuda_code/src/: CMakeLists.txt  stdafx.h
test/: CMakeLists.txt  compare_results.cpp  compare_test.cpp  cuda_test.cu
test/common/: tftn_config.h
